fix thumbnail on items